--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
-    "react-toastify": "^11.0.3",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
